Fixed a mistake in the api documentation & yml file
